--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>941</width>
+    <width>978</width>
     <height>480</height>
    </rect>
   </property>
@@ -507,40 +507,14 @@
    <item row="2" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <spacer name="horizontalSpacer_3">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
       <widget class="QLabel" name="externaliplabel">
        <property name="text">
-        <string>Enter your external IPv4-Adress / Port:</string>
+        <string>External Adress / Port:</string>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="horizontalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="ipv4AddressWidget">
+      <widget class="QLineEdit" name="listenAddr">
        <property name="palette">
         <palette>
          <active>
@@ -606,15 +580,18 @@
         </palette>
        </property>
        <property name="inputMask">
-        <string>999.999.999.999; </string>
+        <string/>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
-      <widget class="QSpinBox" name="portWidget">
+      <widget class="QSpinBox" name="listenPortBox">
        <property name="palette">
         <palette>
          <active>
@@ -682,6 +659,9 @@
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
        <property name="buttonSymbols">
         <enum>QAbstractSpinBox::NoButtons</enum>
        </property>
@@ -692,19 +672,6 @@
         <number>80</number>
        </property>
       </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
      </item>
     </layout>
    </item>
@@ -745,7 +712,7 @@
         <enum>Qt::RightToLeft</enum>
        </property>
        <property name="text">
-        <string>Disable flexible device connections</string>
+        <string>Disable flexible devices</string>
        </property>
       </widget>
      </item>
