--- a/arado.qrc
+++ b/arado.qrc
@@ -43,6 +43,7 @@
         <file>images/hotmail.png</file>
         <file>images/aim.png</file>
         <file>images/exec.png</file>
+        <file>images/heartbeat.png</file>
     </qresource>
     <qresource prefix="/help">
         <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
