--- a/ui/aradomain.ui
+++ b/ui/aradomain.ui
@@ -39,21 +39,22 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>25</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
      <string>System</string>
     </property>
-    <addaction name="separator"/>
-    <addaction name="actionSettings"/>
-    <addaction name="separator"/>
     <addaction name="actionListener"/>
+    <addaction name="separator"/>
     <addaction name="actionShowUuid"/>
     <addaction name="actionMailUuid"/>
     <addaction name="separator"/>
+    <addaction name="actionSettings"/>
+    <addaction name="separator"/>
     <addaction name="actionRestart"/>
+    <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
@@ -216,8 +217,15 @@
    </property>
   </action>
   <action name="actionListener">
+   <property name="icon">
+    <iconset resource="../arado.qrc">
+     <normaloff>:/images/heartbeat.png</normaloff>:/images/heartbeat.png</iconset>
+   </property>
    <property name="text">
-    <string>Configure Listener</string>
+    <string>Configure Arado Heartbeat Base</string>
+   </property>
+   <property name="toolTip">
+    <string>Configure Arado Base: Enter your external IP-Adress and forwarded (!) Port (ideally Port 80 or 29998 by default)</string>
    </property>
   </action>
  </widget>
