--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -507,9 +507,16 @@
    <item row="2" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="QLabel" name="externaliplabel">
+      <widget class="QPushButton" name="buttonExternalip">
+       <property name="toolTip">
+        <string>Arado Heartbeat Base.</string>
+       </property>
        <property name="text">
-        <string>External Adress / Port:</string>
+        <string>Enter your External Address / Port:</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../arado.qrc">
+         <normaloff>:/images/heartbeat.png</normaloff>:/images/heartbeat.png</iconset>
        </property>
       </widget>
      </item>
@@ -840,6 +847,38 @@
    <item row="4" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
+      <widget class="QPushButton" name="buttonStartSync">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>43</height>
+        </size>
+       </property>
+       <property name="toolTip">
+        <string>Connect Devices and start to sync URLs.</string>
+       </property>
+       <property name="text">
+        <string>Start Sync</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../arado.qrc">
+         <normaloff>:/images/noatunloopsong.png</normaloff>:/images/noatunloopsong.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="buttonAddDevice">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -868,38 +907,6 @@
        <property name="icon">
         <iconset resource="../arado.qrc">
          <normaloff>:/images/server.png</normaloff>:/images/server.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>32</width>
-         <height>32</height>
-        </size>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="buttonStartSync">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>43</height>
-        </size>
-       </property>
-       <property name="toolTip">
-        <string>Connect Devices and start to sync URLs.</string>
-       </property>
-       <property name="text">
-        <string>Start Sync</string>
-       </property>
-       <property name="icon">
-        <iconset resource="../arado.qrc">
-         <normaloff>:/images/noatunloopsong.png</normaloff>:/images/noatunloopsong.png</iconset>
        </property>
        <property name="iconSize">
         <size>
