--- a/ui/listener-edit.ui
+++ b/ui/listener-edit.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>465</width>
-    <height>195</height>
+    <width>457</width>
+    <height>202</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Server-Listen Settings</string>
+   <string>Arado Heartbeat Base: Enter your external IP-Address/Port Settings</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../arado.qrc">
     <normaloff>:/arado-logo-colo-128.png</normaloff>:/arado-logo-colo-128.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" colspan="2">
+   <item row="1" column="0" colspan="2">
     <widget class="QLabel" name="label">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -30,11 +30,11 @@
       <enum>Qt::RightToLeft</enum>
      </property>
      <property name="text">
-      <string>IP/Name/ID:</string>
+      <string>IP/Name/Address:</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="2" colspan="2">
+   <item row="1" column="2" colspan="2">
     <widget class="QLineEdit" name="addressEdit">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -44,7 +44,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="2">
+   <item row="2" column="2">
     <widget class="QSpinBox" name="portBox">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -55,19 +55,31 @@
      <property name="maximum">
       <number>65535</number>
      </property>
+     <property name="value">
+      <number>80</number>
+     </property>
     </widget>
    </item>
-   <item row="2" column="2" colspan="2">
+   <item row="3" column="2" colspan="2">
     <widget class="QLineEdit" name="uuidEdit">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
        <horstretch>30</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="inputMethodHints">
+      <set>Qt::ImhPreferUppercase|Qt::ImhUppercaseOnly</set>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
-   <item row="6" column="0" colspan="4">
+   <item row="7" column="0" colspan="4">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="saveButton">
@@ -117,8 +129,11 @@
      </item>
     </layout>
    </item>
-   <item row="4" column="2">
+   <item row="5" column="2">
     <widget class="QRadioButton" name="offCheck">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="text">
       <string>OFF</string>
      </property>
@@ -127,20 +142,20 @@
      </attribute>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="5" column="0" colspan="2">
     <widget class="QRadioButton" name="onCheck">
      <property name="layoutDirection">
       <enum>Qt::RightToLeft</enum>
      </property>
      <property name="text">
-      <string>Listen ON</string>
+      <string>Arado Heartbeat Base:  ON</string>
      </property>
      <attribute name="buttonGroup">
       <string>inuseGroup</string>
      </attribute>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="2" column="1">
     <widget class="QLabel" name="label_2">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -156,7 +171,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="3" column="1">
     <widget class="QLabel" name="label_5">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -168,7 +183,30 @@
       <enum>Qt::RightToLeft</enum>
      </property>
      <property name="text">
-      <string>UUID</string>
+      <string>Your UUID:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap resource="../arado.qrc">:/images/heartbeat.png</pixmap>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2">
+    <widget class="QLabel" name="label_4">
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Enter your external IP-Address/Port to connect:</string>
      </property>
     </widget>
    </item>
