make listener-edit available from button, fix broken widget form

--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -507,7 +507,7 @@
    <item row="2" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="QPushButton" name="buttonExternalip">
+      <widget class="QPushButton" name="buttonExternalIp">
        <property name="toolTip">
         <string>Arado Heartbeat Base.</string>
        </property>
