--- a/ui/listener-edit.ui
+++ b/ui/listener-edit.ui
@@ -7,18 +7,18 @@
     <x>0</x>
     <y>0</y>
     <width>473</width>
-    <height>269</height>
+    <height>200</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Server-Listen Settings</string>
+   <string>Settings: External IP-Address/Port</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../arado.qrc">
     <normaloff>:/arado-logo-colo-128.png</normaloff>:/arado-logo-colo-128.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" colspan="2">
+   <item row="0" column="2">
     <widget class="QLabel" name="label_4">
      <property name="font">
       <font>
@@ -27,7 +27,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Edit your external IP-Address/Port or UUID:</string>
+      <string>Enter your external IP-Address/Port or edit UUID:</string>
      </property>
     </widget>
    </item>
@@ -47,7 +47,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="1" column="2" colspan="3">
     <widget class="QLineEdit" name="addressEdit">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -73,7 +73,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="2" column="2">
     <widget class="QSpinBox" name="portBox">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -83,6 +83,9 @@
      </property>
      <property name="maximum">
       <number>65535</number>
+     </property>
+     <property name="value">
+      <number>80</number>
      </property>
     </widget>
    </item>
@@ -98,11 +101,11 @@
       <enum>Qt::RightToLeft</enum>
      </property>
      <property name="text">
-      <string>UUID</string>
+      <string>UUID:</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="3" column="2" colspan="3">
     <widget class="QLineEdit" name="uuidEdit">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -112,20 +115,33 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
+   <item row="0" column="0">
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string/>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::RichText</enum>
+     </property>
+     <property name="openExternalLinks">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="3">
     <widget class="QRadioButton" name="onCheck">
      <property name="layoutDirection">
       <enum>Qt::RightToLeft</enum>
      </property>
      <property name="text">
-      <string>Listen ON</string>
+      <string> ON</string>
      </property>
      <attribute name="buttonGroup">
       <string>inuseGroup</string>
      </attribute>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="2" column="4">
     <widget class="QRadioButton" name="offCheck">
      <property name="text">
       <string>OFF</string>
@@ -135,7 +151,7 @@
      </attribute>
     </widget>
    </item>
-   <item row="5" column="0" colspan="2">
+   <item row="5" column="2" colspan="3">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="saveButton">
