--- a/ui/listener-edit.ui
+++ b/ui/listener-edit.ui
@@ -152,7 +152,7 @@
     </widget>
    </item>
    <item row="5" column="2" colspan="3">
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout2">
      <item>
       <widget class="QPushButton" name="saveButton">
        <property name="sizePolicy">
